<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/new_note_background"
    android:padding = "20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/newNoteTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/new_note_background"
        android:fontFamily="@font/cambay"
        android:gravity="top"
        android:hint="@string/title"
        android:padding="20dp"
        android:textColorHint="#9A9A9A"
        android:textSize="30sp"
        android:textStyle="bold"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/date"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor = "#ACACAC"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/newNoteTitleEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/newNoteDescriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="top"
        android:hint="@string/description"
        android:padding="20sp"
        android:textColorHint="#9A9A9A"
        android:textSize="25sp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:background="@drawable/new_note_background"
        app:layout_constraintTop_toBottomOf="@id/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>